prusti-tests/tests/verify/ui/counterexamples/replace.stderr
error: [Prusti: verification error] panic!(..) statement might be reachable
  --> $DIR/replace.rs:11:16
   |
11 |                panic!("no access"); 
   |                ^^^^^^^^^^^^^^^^^^^
   |
note: counterexample for "x"
  initial value: ref('$' (0x24))
  final value:   ref('$' (0x24))
  --> $DIR/replace.rs:5:12
   |
5  | fn replace(x: &mut char, acc: bool) {
   |            ^
note: counterexample for "acc"
  initial value: false
  final value:   false
  --> $DIR/replace.rs:5:26
   |
5  | fn replace(x: &mut char, acc: bool) {
   |                          ^^^
   = note: this error originates in the macro `$crate::panic::panic_2015` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

